--- a/Readme
+++ b/Readme
@@ -7,9 +7,9 @@ This project involves creating an interactive sales dashboard to analyze ecommer
 ## Dashboard Screenshots
 
 Here are a few screenshots of the completed dashboard to showcase its design and features. These images are included directly in the repository for easy viewing.
-![Alt text](/relative/path/to/img.jpg?raw=true "Optional Title")
+![Main Dashboard View](Screenshot%202025-08-17%20180946.png)
 *A view of the main dashboard with key metrics and charts.*
-
+![Detailed Dashboard View](Screenshot%202025-08-17%20181026.png)
 *A closer look at some of the interactive visualizations.*
 
 ## Files in this Repository
