--- a/Readme
+++ b/Readme
@@ -1,47 +1,66 @@
-# 📊 Ecommerce Sales Dashboard  
+# 📊 E-commerce Sales Dashboard (Power BI)
 
-![Power BI](https://img.shields.io/badge/Power%20BI-Data%20Visualization-F2C811?logo=power-bi&logoColor=black)  
-![Data Analysis](https://img.shields.io/badge/Data%20Analysis-Ecommerce-blue)  
-![CSV](https://img.shields.io/badge/Data-CSV-green)  
-![License](https://img.shields.io/badge/License-MIT-orange)  
+## 📌 Overview
 
-## 📌 Project Overview
-This project showcases an **interactive sales dashboard** built using **Power BI** to analyze ecommerce sales data.  
-The dashboard provides insights into **key performance indicators (KPIs)** such as **total sales, profit, and quantity sold**, while allowing users to explore trends across **categories, sub-categories, regions, and payment modes**.
+This repository contains an **E-commerce Sales Dashboard** developed in Power BI. The dashboard provides a comprehensive view of online sales performance, enabling businesses to track revenue, profit, customer behavior, and product performance through interactive visualizations.
 
-## 🖼️ Dashboard Screenshots
-Here are a few previews of the completed dashboard:
+-----
 
-![Main Dashboard View](Screenshot%202025-08-17%20180946.png)  
-*A view of the main dashboard with key metrics and charts.*
+## ✨ Features
 
-![Detailed Dashboard View](Screenshot%202025-08-17%20181026.png)  
-*A closer look at some of the interactive visualizations.*
+  - **Key Metrics Overview** – Total Sales, Profit, Average Order Value (AOV), and Quantity
+  - **Regional Insights** – Sales by State to identify top-performing regions
+  - **Customer Analysis** – Track high-value customers and their contribution
+  - **Category & Sub-Category Performance** – Identify best-selling and least-performing products
+  - **Payment Mode Analysis** – Understand customer preferences across COD, UPI, Cards, EMI, etc.
+  - **Profit Trends by Month** – Seasonal sales and profit variations
+  - **Interactive Filters** – Slice data by **Quarter** and **State** for deep insights
 
-## 📂 Files in this Repository
-- **`Ecommerce sales dashboard project.pbix`** → The main Power BI file containing the data model, transformations, and dashboard.  
-- **`Orders.csv`** → Customer and order details (`Order ID`, `Order Date`, `Customer Name`, `State`, `City`).  
-- **`Details.csv`** → Item-level details (`Order ID`, `Amount`, `Profit`, `Quantity`, `Category`, `Sub-Category`, `Payment Mode`).  
-- **`dark-gradient.jpg`** → Dashboard background image for better visual design.  
+-----
 
-## 🚀 Key Features
-- 📈 **Sales & Profit Analysis** → Track total sales and profit over time.  
-- 🛍️ **Product Performance** → Insights by `Category` and `Sub-Category`.  
-- 🗺️ **Geographical Insights** → Sales distribution across states.  
-- 💳 **Payment Method Trends** → Breakdown of sales by payment mode.  
-- 🎛️ **Interactive Filters** → Slicers & filters to drill down into specific data points.  
+## 🛠️ Tools Used
 
-## ⚡ How to Use
-1. **Clone the Repository**  
-   git clone https://github.com/kondukarthik/Ecommerce-sales-analysis-using-power-bi-dashboard.git
-2. **Open in Power BI Desktop**
-   Launch the `Ecommerce sales dashboard project.pbix` file in **Power BI Desktop**.
-3. **Refresh Data (if needed)**
-   If file paths differ, update the data source paths for `Orders.csv` and `Details.csv` in **Power Query Editor**.
-4. **Explore**
-   Interact with the dashboard to uncover business insights.
+  - **Power BI Desktop** – Data visualization and dashboard creation
+  - **Excel / CSV Data Source** – Input sales dataset
+  - **DAX** – For calculated measures and KPIs
 
-## 🛠️ Technologies Used
+-----
 
-* **Power BI Desktop** → Data modeling, transformation, and visualization.
-* **CSV Files** → Source data storage.
+## 📷 Dashboard Screenshots
+![alt text](Screenshot 2025-08-17 180946.png)
+### Dashboard View 1
+
+![alt text](Screenshot 2025-08-17 181026.png)
+### Dashboard View 2
+
+-----
+
+## 🚀 How to Use
+
+1.  Clone this repository:
+    ```bash
+    git clone https://github.com/your-username/ecommerce-sales-dashboard.git
+    ```
+2.  Open the `Ecommerce sales dashboard project.pbix` file using **Power BI Desktop**.
+3.  Connect to the provided dataset (`Orders.csv`, `Details.csv`) or replace it with your own sales data.
+4.  Explore insights with interactive filters and visualizations.
+
+-----
+
+## 📈 Insights Gained
+
+  - Maharashtra, Madhya Pradesh, and Uttar Pradesh lead in overall sales.
+  - Clothing contributes the highest sales volume among categories.
+  - COD is the most preferred payment mode.
+  - Printers and Bookcases show strong profitability, while some sub-categories underperform.
+  - Seasonal variations affect profitability, with notable peaks in **January, February, and December**.
+
+-----
+
+## 📌 Future Enhancements
+
+  - Integration with live databases for real-time updates
+  - Adding customer segmentation and churn analysis
+  - Forecasting future sales using AI/ML models
+
+-----
